dev/test_programs/INVALID/group1/stmt23.go
package main;

func main(){
	var x int;
	x = 1;
	if x = 2 {
		print("test");
	}
}
